--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body,
   font-size: 16px;
   padding: 0;
   margin: 0;
-  font-family: 'Rubik';
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100%;
 }
 
